--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RateCalcActivity"></activity>
+        <activity android:name=".NoticeActivity"
+            >
+
+        </activity>
+        <activity android:name=".RateCalcActivity" android:theme="@style/Theme.AppCompat.Light.Dialog"></activity>
         <activity android:name=".MyAdapter" />
         <activity android:name=".MyList2Activity" />
-        <activity android:name=".MyListActivity" />
-        <activity android:name=".RateListActivity" />
-        <activity android:name=".ConfigActivity" />
-        <activity android:name=".RateActivity">
+        <activity android:name=".MyListActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".RateListActivity" />
+        <activity android:name=".ConfigActivity" />
+        <activity android:name=".RateActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
